--- a/README
+++ b/README
@@ -1,10 +1,9 @@
 MOZILLA THUNDERBIRD EXTENSION FOR
        SENDER VERIFICATION
 
-By Joshua Tauberer <tauberer@for.net>
-Copyright Joshua Tauberer 2004-2005
+By Joshua Tauberer, 2004-2006
 
-http://taubz.for.net/code/spf
+http://razor.occams.info/code/spf
 
 Feel free to use these files however you want.
 
