--- a/locale/en-US/xulstrings.dtd
+++ b/locale/en-US/xulstrings.dtd
@@ -6,8 +6,10 @@
 <!ENTITY menu.key "V">
 
 <!ENTITY options.title "Options">
+<!ENTITY options.general "General">
 <!ENTITY options.checkeveryemail "Check Every Email">
-<!ENTITY options.usedk "Check DomainKeys Signatures (Small bits of your emails are sent over the Internet; see the privacy warning on the website)">
+<!ENTITY options.usedk "Check DomainKeys Signatures">
+<!ENTITY options.usedk.info "(Small bits of your emails are sent over the Internet; see the privacy warning on the website.)">
 <!ENTITY options.popups "Show Popup Warnings for Unverified Emails">
 <!ENTITY options.usestatusbar "Show Verification Result in Status Bar">
 <!ENTITY options.mtas "Internal Network Servers:">
@@ -19,7 +21,7 @@
 <!ENTITY options.verificationserver "DK Verification Server:">
 <!ENTITY options.verificationserverinfo "This is the address of the server which will be contacted to perform DomainKeys verifications if Check DomainKeys Signatures is checked above.  Leave blank to use the default server.">
 <!ENTITY options.dns "DNS Server:">
-<!ENTITY options.dnsinfo "Optionally provide the IP or hostname of your own DNS server.  Leave blank to auto-detect.  May require Thunderbird restart.">
+<!ENTITY options.dnsinfo "Optionally provide the IP or hostname of your own DNS server.  Leave blank to auto-detect.  May require Thunderbird restart.  If you are behind a firewall and the extension reports TCP timeout problems, try using this: occams.info:9053">
 
 <!ENTITY forwarders.title "Trusted Forwarders">
 <!ENTITY forwarders.header.one "Recognizing Trusted Forwarders">
