--- a/locale/fr-FR/xulstrings.dtd
+++ b/locale/fr-FR/xulstrings.dtd
@@ -6,8 +6,10 @@
 <!ENTITY menu.key "V">
 
 <!ENTITY options.title "Options">
+<!ENTITY options.general "Généralités">
 <!ENTITY options.checkeveryemail "Vérifier tous les courriers">
-<!ENTITY options.usedk "Vérifier les signatures DomainKeys (Des 'morceaux' de vos courriers sont envoyé sur Internet ; Voir l'avertissement de confidentialité sur la page du site Web)">
+<!ENTITY options.usedk "Vérifier les signatures DomainKeys">
+<!ENTITY options.usedk.info "(Des 'morceaux' de vos courriers sont envoyé sur Internet ; Voir l'avertissement de confidentialité sur la page du site Web.)">
 <!ENTITY options.popups "Afficher la fenêtre d'avertissement pour les messages non-vérifiés">
 <!ENTITY options.usestatusbar "Montrer les résultats de la vérification dans la barre d'état">
 <!ENTITY options.mtas "Serveurs du réseau Interne:">
