--- a/locale/fr-FR/xulstrings.dtd
+++ b/locale/fr-FR/xulstrings.dtd
@@ -8,6 +8,7 @@
 <!ENTITY options.title "Options">
 <!ENTITY options.general "Généralités">
 <!ENTITY options.checkeveryemail "Vérifier tous les courriers">
+<!ENTITY options.checkrbls "Employer les listes noires de spam SURBL et Spamhaus">
 <!ENTITY options.usedk "Vérifier les signatures DomainKeys">
 <!ENTITY options.usedk.info "(Des 'morceaux' de vos courriers sont envoyé sur Internet ; Voir l'avertissement de confidentialité sur la page du site Web.)">
 <!ENTITY options.popups "Afficher la fenêtre d'avertissement pour les messages non-vérifiés">
