--- a/locale/en-US/xulstrings.dtd
+++ b/locale/en-US/xulstrings.dtd
@@ -8,7 +8,7 @@
 <!ENTITY options.title "Options">
 <!ENTITY options.general "General">
 <!ENTITY options.checkeveryemail "Check Every Email">
-<!ENTITY options.checkrbls "Use Spam Blacklists SURBL and Spamhaus">
+<!ENTITY options.checkrbls "Use DNS-based Lists SURBL, Spamhaus, Sender Score Certified, and DNSWL">
 <!ENTITY options.checkab "Report If Sender Is In Your Personal Address Book (&quot;Sender is known to you.&quot;)">
 <!ENTITY options.usedk "Check DomainKeys Signatures">
 <!ENTITY options.usedk.info "(Small bits of your emails are sent over the Internet; see the privacy warning on the website.)">
