--- a/locale/fr-FR/xulstrings.dtd
+++ b/locale/fr-FR/xulstrings.dtd
@@ -8,7 +8,7 @@
 <!ENTITY options.title "Options">
 <!ENTITY options.general "Généralités">
 <!ENTITY options.checkeveryemail "Vérifier tous les courriers">
-<!ENTITY options.checkrbls "Employer les listes noires de spam SURBL et Spamhaus">
+<!ENTITY options.checkrbls "Employer les listes blanc/noires SURBL, Spamhaus, Sender Score Certified, et DNSWL">
 <!ENTITY options.checkab "Rapporter si l'expéditeur est en votre carnet d'adresses personnel. (&quot;L'expéditeur est connu à toi.&quot;)">
 <!ENTITY options.usedk "Vérifier les signatures DomainKeys">
 <!ENTITY options.usedk.info "(Des 'morceaux' de vos courriers sont envoyé sur Internet ; Voir l'avertissement de confidentialité sur la page du site Web.)">
