credit Gerardo Bueno for the ES translation

--- a/README
+++ b/README
@@ -12,3 +12,4 @@ To create the XPI installer for Thunderbird, run make!
 Translations:
 
 Thanks to Eric Leu for providing translations in French!
+Thanks to Gerardo Bueno for providing translations in Spanish!
