--- a/locale/en-US/xulstrings.dtd
+++ b/locale/en-US/xulstrings.dtd
@@ -25,7 +25,7 @@
 <!ENTITY options.verificationserver "DK Verification Server:">
 <!ENTITY options.verificationserverinfo "This is the address of the server which will be contacted to perform DomainKeys verifications if Check DomainKeys Signatures is checked above.  Leave blank to use the default server.">
 <!ENTITY options.dns "DNS Server:">
-<!ENTITY options.dnsinfo "Optionally provide the IP or hostname of your own DNS server.  Leave blank to auto-detect.  May require Thunderbird restart.  If you are behind a firewall and the extension reports TCP timeout problems, try using this: occams.info:9053">
+<!ENTITY options.dnsinfo "Optionally provide the IP or hostname of your own DNS server.  Leave blank to use Google Public DNS.  May require Thunderbird restart.">
 <!ENTITY options.nocheckdomains "Don't Check These Domains:">
 <!ENTITY options.nocheckdomainsinfo "List domain names (e.g. gmx.net), separated by commas, for which sender verification should not be performed.">
 
