--- a/locale/fr-FR/xulstrings.dtd
+++ b/locale/fr-FR/xulstrings.dtd
@@ -25,7 +25,7 @@
 <!ENTITY options.verificationserver "Vérification de serveurs DK:">
 <!ENTITY options.verificationserverinfo "Voici l'adresse du serveur qui sera contacté pour effectuer les vérifications DomainKeys si l'option de vérification des signatures DomainKeys est cochée ci-dessus. Laisser en blanc pour utiliser le serveur par défaut.">
 <!ENTITY options.dns "Serveur DNS:">
-<!ENTITY options.dnsinfo "En option, vous pouvez fournir l'IP ou le nom d'hôte de votre propre serveur DNS. Laisser en blanc pour une autodetection. Cela peut nécessiter le redémarrage de Thunderbird. Si vous êtes situé derrière un Pare-feu et que l'extention vous renvoie un message de 'TCP timeout', essayez d'utiliser ce paramètre: occams.info:9053">
+<!ENTITY options.dnsinfo "En option, vous pouvez fournir l'IP ou le nom d'hôte de votre propre serveur DNS. Leave blank to use Google Public DNS.  May require Thunderbird restart.">
 <!ENTITY options.nocheckdomains "Ne Pas Vérifier Ces Domaines:"> <!-- Google'd -->
 <!ENTITY options.nocheckdomainsinfo "Liste des noms de domaine (par exemple gmx.net), séparés par une virgule, pour lesquelles l'expéditeur de vérification ne doit pas être exécutée."> <!-- Google'd -->
 
